# fastapi_postgresql_api

./: .gitignore  alembic.ini  main.py  pyproject.toml
api/: courses.py  users.py
api/utils/: courses_util.py  users_util.py
db/: db_setup.py
db/models/: course_model.py  mixins.py  user_model.py
migrations/: env.py
migrations/versions/: afee44aac335_.py
pydantic_schemas/: course_schema.py  user_schema.py
